--- a/Flow.Launcher/SettingWindow.xaml
+++ b/Flow.Launcher/SettingWindow.xaml
@@ -693,7 +693,7 @@
                                 </ItemsControl>
                             </Border>
 
-                            <Border 
+                            <Border
                                 Margin="0,30,0,0"
                                 Padding="0"
                                 Style="{DynamicResource SettingGroupBox}">
@@ -720,7 +720,7 @@
                                                 <ComboBox
                                                     x:Name="SelectScreen"
                                                     MinWidth="160"
-                                                    Margin="0,0,18,0" 
+                                                    Margin="0,0,18,0"
                                                     VerticalAlignment="Center"
                                                     FontSize="14"
                                                     ItemsSource="{Binding ScreenNumbers}"
@@ -738,14 +738,12 @@
                                                 </ComboBox>
                                             </StackPanel>
                                             <TextBlock Style="{StaticResource Glyph}">
-                                            &#xe7f4;
+                                                &#xe7f4;
                                             </TextBlock>
                                         </ItemsControl>
                                     </Border>
 
-                                    <Separator
-                                        Width="Auto"
-                                        BorderThickness="1">
+                                    <Separator Width="Auto" BorderThickness="1">
                                         <Separator.Style>
                                             <Style BasedOn="{StaticResource SettingSeparatorStyle}" TargetType="Separator">
                                                 <Setter Property="Visibility" Value="Visible" />
@@ -758,9 +756,7 @@
                                         </Separator.Style>
                                     </Separator>
 
-                                    <Border
-                                        Margin="0"
-                                        BorderThickness="0">
+                                    <Border Margin="0" BorderThickness="0">
                                         <Border.Style>
                                             <Style BasedOn="{StaticResource SettingGroupBox}" TargetType="Border">
                                                 <Setter Property="Visibility" Value="Visible" />
@@ -786,8 +782,7 @@
                                                     FontSize="14"
                                                     ItemsSource="{Binding SearchWindowAligns}"
                                                     SelectedValue="{Binding Settings.SearchWindowAlign}"
-                                                    SelectedValuePath="Value">
-                                                </ComboBox>
+                                                    SelectedValuePath="Value" />
                                                 <StackPanel Margin="0,0,18,0" Orientation="Horizontal">
                                                     <StackPanel.Style>
                                                         <Style TargetType="StackPanel">
@@ -817,7 +812,7 @@
                                                 </StackPanel>
                                             </StackPanel>
                                             <TextBlock Style="{StaticResource Glyph}">
-                                            &#xe7f4;
+                                                &#xe7f4;
                                             </TextBlock>
                                         </ItemsControl>
                                     </Border>
@@ -2414,6 +2409,10 @@
                                                         </TextBlock>
                                                     </ItemsControl>
                                                 </Border>
+                                                <Separator
+                                                    Width="Auto"
+                                                    BorderThickness="1"
+                                                    Style="{StaticResource SettingSeparatorStyle}" />
                                                 <Border
                                                     Margin="0"
                                                     BorderThickness="0"
@@ -2422,6 +2421,7 @@
                                                         <StackPanel Style="{StaticResource TextPanel}">
                                                             <TextBlock Style="{DynamicResource SettingTitleLabel}" Text="{DynamicResource animationLength}" />
                                                             <TextBlock Style="{DynamicResource SettingSubTitleLabel}" Text="{DynamicResource animationLengthToolTip}" />
+
                                                         </StackPanel>
                                                         <StackPanel Grid.Column="2" Orientation="Horizontal">
                                                             <TextBlock
@@ -2438,7 +2438,7 @@
                                                                 VerticalAlignment="Center"
                                                                 IsMoveToPointEnabled="True"
                                                                 IsSnapToTickEnabled="True"
-                                                                Maximum="2000"
+                                                                Maximum="1000"
                                                                 Minimum="100"
                                                                 TickFrequency="10"
                                                                 Value="{Binding AnimationLength, Mode=TwoWay}" />
